--- a/ansible/install_applications/roles/home-homeassistant.deploy/app/deploy/mysql-secret.yaml.j2
+++ b/ansible/install_applications/roles/home-homeassistant.deploy/app/deploy/mysql-secret.yaml.j2
@@ -8,5 +8,5 @@ metadata:
     app-component: mysql
 type: Opaque
 data:
-  password: {{ homeassistant.mysql.password | b64encode }}
-  root_password: {{ homeassistant.mysql.root_password | b64encode }}
+  password: {{ homeassistant_mysql.password | b64encode }}
+  root_password: {{ homeassistant_mysql.root_password | b64encode }}
