--- a/ansible/install_applications/roles/home-homeassistant.prepare/app/prepare/secrets.yaml.j2
+++ b/ansible/install_applications/roles/home-homeassistant.prepare/app/prepare/secrets.yaml.j2
@@ -3,7 +3,7 @@
 # Learn more at https://home-assistant.io/docs/configuration/secrets/
 
 
-recorder_mysql_url: mysql://{{ homeassistant.mysql.user }}:{{ homeassistant.mysql.password }}@homeassistant-mysql/{{ homeassistant.mysql.database }}?charset=utf8
+recorder_mysql_url: mysql://{{ homeassistant_mysql.user }}:{{ homeassistant_mysql.password }}@homeassistant-mysql/{{ homeassistant_mysql.database }}?charset=utf8
 
 # MQTT credentials
 mqtt_username: {{ homeassistant.mqtt.user }}
