--- a/ansible/install_applications/roles/web-ttrss.deploy/app/config/config.php.j2
+++ b/ansible/install_applications/roles/web-ttrss.deploy/app/config/config.php.j2
@@ -5,9 +5,9 @@
 
 	define('DB_TYPE', 'pgsql');
 	define('DB_HOST', 'ttrss-pgsql');
-	define('DB_USER', '{{ ttrss.pgsql.user }}');
-	define('DB_NAME', '{{ ttrss.pgsql.database }}');
-	define('DB_PASS', '{{ ttrss.pgsql.password }}');
+	define('DB_USER', '{{ ttrss_pgsql.user }}');
+	define('DB_NAME', '{{ ttrss_pgsql.database }}');
+	define('DB_PASS', '{{ ttrss_pgsql.password }}');
 	define('DB_PORT', '5432');
 
 	define('MYSQL_CHARSET', 'UTF8');
