--- a/ansible/install_applications/roles/dev-gitlab.deploy/app/deploy/statefulSet.yaml.j2
+++ b/ansible/install_applications/roles/dev-gitlab.deploy/app/deploy/statefulSet.yaml.j2
@@ -22,7 +22,7 @@ spec:
         app-component: gitlab
     spec:
       containers:
-      - image: gitlab/gitlab-ce:12.0.2-ce.0
+      - image: "{{ gitlab.container.image }}"
         name: gitlab
         ports:
         - containerPort: 80
@@ -39,11 +39,11 @@ spec:
           name: postgre-metrics
         resources:
           requests:
-            cpu: "{{ gitlab_requests_cpu | default("500m") }}"
-            memory: "{{ gitlab_requests_memory | default("3072Mi") }}"
+            cpu: "{{ gitlab.container.requests_cpu }}"
+            memory: "{{ gitlab.container.requests_memory }}"
           limits:
-            cpu: "{{ gitlab_limits_cpu | default("2000m") }}"
-            memory: "{{ gitlab_limits_memory | default("3072Mi") }}"
+            cpu: "{{ gitlab.container.limits_cpu }}"
+            memory: "{{ gitlab.container.limits_memory }}"
         volumeMounts:
         - name: tz-config
           mountPath: /etc/localtime
