--- a/ansible/install_applications/roles/home-nodered.deploy/app/deploy/statefulSet.yaml.j2
+++ b/ansible/install_applications/roles/home-nodered.deploy/app/deploy/statefulSet.yaml.j2
@@ -22,18 +22,18 @@ spec:
         app-component: nodered
     spec:
       containers:
-      - image: {{ docker_registry.url }}/nodered
+      - image: "{{ nodered.container.image }}"
         name: nodered
         ports:
         - containerPort: 1880
           name: nodered
         resources:
           requests:
-            cpu: "{{ nodered_requests_cpu | default("250m") }}"
-            memory: "{{ nodered_requests_memory | default("256Mi") }}"
+            cpu: "{{ nodered.container.requests_cpu }}"
+            memory: "{{ nodered.container.requests_memory }}"
           limits:
-            cpu: "{{ nodered_limits_cpu | default("500m") }}"
-            memory: "{{ nodered_limits_memory | default("256Mi") }}"
+            cpu: "{{ nodered.container.limits_cpu }}"
+            memory: "{{ nodered.container.limits_memory }}"
         volumeMounts:
         - name: tz-config
           mountPath: /etc/localtime
