--- a/ansible/install_applications/roles/infra-gotify.deploy/app/deploy/statefulSet.yaml.j2
+++ b/ansible/install_applications/roles/infra-gotify.deploy/app/deploy/statefulSet.yaml.j2
@@ -22,18 +22,18 @@ spec:
         app-component: gotify
     spec:
       containers:
-      - image: gotify/server:2.0.5
+      - image: "{{ gotify.container.image }}"
         name: gotify
         ports:
         - containerPort: 80
           name: gotify
         resources:
           requests:
-            cpu: "{{ gotify_requests_cpu | default("50m") }}"
-            memory: "{{ gotify_requests_memory | default("64Mi") }}"
+            cpu: "{{ gotify.container.requests_cpu }}"
+            memory: "{{ gotify.container.requests_memory }}"
           limits:
-            cpu: "{{ gotify_limits_cpu | default("100m") }}"
-            memory: "{{ gotify_limits_memory | default("64Mi") }}"
+            cpu: "{{ gotify.container.limits_cpu }}"
+            memory: "{{ gotify.container.limits_memory }}"
         volumeMounts:
         - name: tz-config
           mountPath: /etc/localtime
