--- a/ansible/install_applications/roles/infra-zonemta.deploy/app/deploy/mongdb-statefulSet.yaml.j2
+++ b/ansible/install_applications/roles/infra-zonemta.deploy/app/deploy/mongdb-statefulSet.yaml.j2
@@ -22,28 +22,28 @@ spec:
         app-component: mongo
     spec:
       containers:
-      - image: mongo:4.1.13-bionic
+      - image: "{{ zonemta_mongo.container.image }}"
         name: mongo
         env:
         - name: MONGO_INITDB_ROOT_USERNAME
-          value: {{ zonemta.mongo.root_user }}
+          value: {{ zonemta_mongo.root_user }}
         - name: MONGO_INITDB_ROOT_PASSWORD
           valueFrom:
             secretKeyRef:
               name: zonemta-mongo-pass
               key: password
         - name: MONGO_INITDB_DATABASE
-          value: {{ zonemta.mongo.database }}
+          value: {{ zonemta_mongo.database }}
         ports:
         - containerPort: 27017
           name: mongo
         resources:
           requests:
-            cpu: "{{ zonemta_mongo_requests_cpu | default("100m") }}"
-            memory: "{{ zonemta_mongo_requests_memory | default("384Mi") }}"
+            cpu: "{{ zonemta_mongo.container.requests_cpu }}"
+            memory: "{{ zonemta_mongo.container.requests_memory }}"
           limits:
-            cpu: "{{ zonemta_mongo_limits_cpu | default("200m") }}"
-            memory: "{{ zonemta_mongo_limits_memory | default("384Mi") }}"
+            cpu: "{{ zonemta_mongo.container.limits_cpu }}"
+            memory: "{{ zonemta_mongo.container.limits_memory }}"
         volumeMounts:
         - name: tz-config
           mountPath: /etc/localtime
