--- a/ansible/install_applications/roles/infra-zonemta.deploy/app/deploy/mongodb-secret-pass.yaml.j2
+++ b/ansible/install_applications/roles/infra-zonemta.deploy/app/deploy/mongodb-secret-pass.yaml.j2
@@ -8,4 +8,4 @@ metadata:
     app-component: mongo
 type: Opaque
 data:
-  password: {{ zonemta.mongo.root_password | b64encode }}
+  password: {{ zonemta_mongo.root_password | b64encode }}
