--- a/ansible/install_applications/roles/logging-fluentbit.deploy/app/deploy/daemonSet.yaml.j2
+++ b/ansible/install_applications/roles/logging-fluentbit.deploy/app/deploy/daemonSet.yaml.j2
@@ -25,7 +25,7 @@ spec:
     spec:
       containers:
       - name: fluent-bit
-        image: fluent/fluent-bit:1.1.3
+        image: "{{ fluentbit.container.image }}"
         imagePullPolicy: Always
         ports:
           - containerPort: 2020
@@ -45,11 +45,11 @@ spec:
           mountPath: /fluent-bit/etc/
         resources:
           requests:
-            cpu: "{{ fluentbit_requests_cpu | default("5m") }}"
-            memory: "{{ fluentbit_requests_memory | default("10Mi") }}"
+            cpu: "{{ fluentbit.container.requests_cpu }}"
+            memory: "{{ fluentbit.container.requests_memory }}"
           limits:
-            cpu: "{{ fluentbit_limits_cpu | default("50m") }}"
-            memory: "{{ fluentbit_limits_memory | default("60Mi") }}"
+            cpu: "{{ fluentbit.container.limits_cpu }}"
+            memory: "{{ fluentbit.container.limits_memory }}"
       terminationGracePeriodSeconds: 10
       volumes:
       - name: varlog
